[FIX] shadow logo on mobile #4

--- a/style.css
+++ b/style.css
@@ -164,18 +164,22 @@ body:not(.contact-page) {
 /*======= LOGO NAVBAR sin sombra en el tap del movil ====== */
 .logo-nav__link,
 .logo-nav,
-.logo-nav__link img,
-.logo-nav__link span {
+.logo-nav img,
+.logo-nav span {
     -webkit-tap-highlight-color: transparent !important;
     outline: none !important;
     user-select: none;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
     -webkit-tap-highlight-color: transparent !important;
 }
 .logo-nav__link:focus,
 .logo-nav__link:active {
+    outline: none !important;
+    -webkit-tap-highlight-color: transparent !important;
+}
+.logo-nav:focus,
+.logo-nav:active {
     outline: none !important;
     -webkit-tap-highlight-color: transparent !important;
 }
